--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -440,66 +440,122 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
     <div class="container">
 
-        <div class="row">
+
 
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated"> Des offres adaptées à <span> vos besoins !</span></h2>
-                <p class="wow fadeIn animated">
-                  Nous apportons notre expertise à votre entreprise pour booster votre chiffre d'affaires
-                  grâce au web. Nous concevons vos plateformes de communication digitale pour développer votre business.
-                </p><br><br><br>
+
             </div>
 
+            <div class="col-lg-12 service-content">
+              <div class="row">
+
+            <div class="offre1">
+                <p class="contact-header"><span> Web Experience</span></p>
+                <div class="info-line">
+                    <div class="info-icon wow fadeIn animated">
+                        <i class="fa fa-check-square-o" aria-hidden="true"></i>
+                    </div>
+                    <div class="info-text wow fadeIn animated">
+                        <p>Améliorez la visibilité de votre plateforme !</p>
+                    </div>
+                </div>
+                <div class="info-line">
+                    <div class="info-icon wow fadeIn animated">
+                        <i class="fa fa-eur" aria-hidden="true"></i>
+
+                    </div>
+                    <div class="info-text wow fadeIn animated">
+                        <p>Offre entre 2 000€ et 5 000€ selon vos besoins, profitez-en !</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="offre1">
+                <p class="contact-header"><span> User Experience</span></p>
+                <div class="info-line">
+                    <div class="info-icon wow fadeIn animated">
+                        <i class="fa fa-check-square-o" aria-hidden="true"></i>
+                    </div>
+                    <div class="info-text wow fadeIn animated">
+                        <p>Augmentez le nombre de vos clients et fidélisez-les !</p>
+                    </div>
+                </div>
+                <div class="info-line">
+                    <div class="info-icon wow fadeIn animated">
+                        <i class="fa fa-eur" aria-hidden="true"></i>
+
+                    </div>
+                    <div class="info-text wow fadeIn animated">
+                        <p>Offre entre 5 000€ et 10 000€ selon vos besoins, contactez-nous !</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="offre1">
+                <p class="contact-header"><span> Business Experience</span></p>
+                <div class="info-line">
+                    <div class="info-icon wow fadeIn animated">
+                        <i class="fa fa-check-square-o" aria-hidden="true"></i>
+                    </div>
+                    <div class="info-text wow fadeIn animated">
+                        <p>Augmentez votre chiffre d'affaires grâce à des outils performants !</p>
+                    </div>
+                </div>
+                <div class="info-line">
+                    <div class="info-icon wow fadeIn animated">
+                        <i class="fa fa-eur" aria-hidden="true"></i>
+
+                    </div>
+                    <div class="info-text wow fadeIn animated">
+                        <p>Offre entre 10 000€ et 15 000€ selon vos besoins, profitez-en !</p>
+                    </div>
+                </div>
+            </div>
+
+
+          </div>
+        </div>
             <!-- /.service-headline -->
           <div class="service-2 wow fadeIn animated">
             <div class="col-lg-12 service-content">
 
               <div class="row">
-                <div class="col-sm-4"></div>
-                <div class="col-sm-2">
-                  <div class="text">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3">
+                  <div class="text2">
                    <p> Web experience </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="text">
                    <p> User experience </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="text">
                    <p> Business experience </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
-                  <div class="text">
-                   <p> Custom experience </p>
-                  </div>
-                </div>
               </div>
 
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <div class="text">
                   <p> Visibilité accrue </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -507,27 +563,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <div class="text">
                   <p> Référencement optimisé </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -535,27 +586,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <div class="text">
                   <p> Plateformes web multisupport </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -563,27 +609,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <div class="text">
                   <p> Application mobile adaptée </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -591,27 +632,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <div class="text">
                   <p> Expérience utilisateur améliorée </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -619,27 +655,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <div class="text">
                   <p> Fidélisation des clients </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -647,27 +678,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <div class="text">
                   <p> Données clients exploitées </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -675,94 +701,42 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <div class="text">
                   <p> Visualisation des prévisions </p>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
               </div>
+              <br><br><br>
 
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text">
-                  <p> Stratégie digitale personalisée </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text">
-                  <p> Confection sur mesure </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
 
 
             </div>
+
             <!-- .service-content -->
           </div>
-        </div>
+          <div class="col-md-12 service-headline">
+            <p class="wow fadeIn animated">
+              Pour toutes confections sur-mesures, contactez-nous !
+              Nous établierons ensemble votre stratégie digitale. 
+            </p>
+          </div>
+
         <!-- /.row -->
     </div>
     <!-- /.container -->
