--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -521,41 +521,41 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-lg-12 service-content">
 
               <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-3">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-2">
                   <div class="text2">
                    <p> Web experience </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-2">
+                  <div class="text2">
                    <p> User experience </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-2">
+                  <div class="text2">
                    <p> Business experience </p>
                   </div>
                 </div>
               </div>
 
               <div class="row">
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-4">
+                  <div class="text2">
                   <p> Visibilité accrue </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -563,22 +563,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-4">
+                  <div class="text2">
                   <p> Référencement optimisé </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -586,22 +586,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-4">
+                  <div class="text2">
                   <p> Plateformes web multisupport </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -609,22 +609,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-4">
+                  <div class="text2">
                   <p> Application mobile adaptée </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -632,22 +632,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-4">
+                  <div class="text2">
                   <p> Expérience utilisateur améliorée </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -655,22 +655,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-4">
+                  <div class="text2">
                   <p> Fidélisation des clients </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -678,22 +678,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-4">
+                  <div class="text2">
                   <p> Données clients exploitées </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -701,22 +701,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               </div>
 
               <div class="row">
-                <div class="col-sm-3">
-                  <div class="text">
+                <div class="col-sm-4">
+                  <div class="text2">
                   <p> Visualisation des prévisions </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-rouge">
                       <i class="material-icons">close</i>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                   <div class="icons-vert">
                       <i class="material-icons">check</i>
                   </div>
@@ -732,7 +732,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
           </div>
           <div class="col-md-12 service-headline">
             <p class="wow fadeIn animated">
-              Pour toutes confections sur-mesures, contactez-nous !
+              Pour toutes confections sur-mesures, <span>contactez-nous !</span></p>
+              <p>
               Nous établierons ensemble votre stratégie digitale. 
             </p>
           </div>
