--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -744,6 +744,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.service-section -->
 
+<section id="offres-alt" class="services-section">
+    <div class="col-md-12 service-headline">
+            <p class="wow fadeIn animated">
+              Pour consulter nos offres, rendez-vous sur un écran plus large !</p>
+          </div>
+</section>
 <!-- Call To Action Section
 ================================================== -->
 <section id="call-to" class="call-to-section">
