--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -131,14 +131,14 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12">
                 <div class="skills-headline">
                     <h3 class="wow fadeIn animated">
-                        Nous vous aidons à mettre en place <span>vos idées</span> et votre savoir-faire sur <span>l’ensemble des terminaux connectés</span>
+                        <span>Vos idées</span> et <span>votre savoir-faire</span> sur l’ensemble des terminaux connectés
                     </h3>
                     <h3 class="wow fadeIn animated">
                         Faites confiance à des <span>experts de la digitalisation</span> des espaces de loisirs et culturels
                         pour que votre univers traverse les écrans et touche vos <span>visiteurs et prospects</span>
                     </h3>
                     <h3 class="wow fadeIn animated">
-                        Nous mettons en œuvre des solutions <span>simples et efficaces</span> sur tous les supports pour vous
+                        Des solutions <span>simples et efficaces</span> sur tous les supports pour vous
                         aider à gérer vos contenus et vos services <span>en toute autonomie</span>
                     </h3>
                     <a class= "page-scroll" href="#contact">
