--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -105,7 +105,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
                 <div class="typed-text">
                     <span class="skilltechtypetext">
-                        <span class="typed-cursor">|</span>
+                        Espaces de loisirs et culturels, mettez votre statégie digitale au coeur de votre métier !
                     </span>
                 </div>
             </div>
@@ -134,12 +134,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <span>Vos idées</span> et <span>votre savoir-faire</span> sur l’ensemble des terminaux connectés
                     </h3>
                     <h3 class="wow fadeIn animated">
-                        Faites confiance à des <span>experts de la digitalisation</span> des espaces de loisirs et culturels
-                        pour que votre univers traverse les écrans et touche vos <span>visiteurs et prospects</span>
+                        Des <span>solutions simples et efficaces</span> sur tous les supports pour vous
+                        aider à gérer vos contenus et vos services <span>en toute autonomie</span>
                     </h3>
                     <h3 class="wow fadeIn animated">
-                        Des solutions <span>simples et efficaces</span> sur tous les supports pour vous
-                        aider à gérer vos contenus et vos services <span>en toute autonomie</span>
+                        Faites confiance à des <span>experts de la digitalisation</span> des espaces de loisirs et culturels
+                        pour que votre univers traverse les écrans et touche vos <span>visiteurs et prospects</span>
                     </h3>
                     <a class= "page-scroll" href="#contact">
                         <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">
@@ -998,10 +998,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <script src="assets/js/libraries/waypoint.js"></script>
 <script src="assets/js/libraries/jquery.counterup.js"></script>
 <!-- Custom Particle Theme JavaScript -->
-<script>
-    var sentences = ["Des experts en conception digitale développent des solutions adaptées pour vous !"];
-
-</script>
 <script src="assets/js/custom/particle-theme-light-yt.js"></script>
 </body>
 </html>
