--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -434,6 +434,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.service-section -->
 
+<!-- Image Section
+================================================== -->
+<section id="big-image" class="image-service"></section>
+<!-- /.image section -->
+
 <!-- Services Section
 ================================================== -->
 <section id="services" class="services-section">
@@ -734,7 +739,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <p class="wow fadeIn animated">
               Pour toutes confections sur-mesures, <span>contactez-nous !</span></p>
               <p>
-              Nous établierons ensemble votre stratégie digitale. 
+              Nous établierons ensemble votre stratégie digitale.
             </p>
           </div>
 
