--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -471,7 +471,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Offre entre 2 000€ et 5 000€ selon vos besoins, profitez-en !</p>
+                        <p>Offre entre 2 000€ et 5 000€</p>
                     </div>
                 </div>
             </div>
@@ -492,7 +492,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Offre entre 5 000€ et 10 000€ selon vos besoins, contactez-nous !</p>
+                        <p>Offre entre 5 000€ et 10 000€</p>
                     </div>
                 </div>
             </div>
@@ -504,7 +504,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <i class="fa fa-check-square-o" aria-hidden="true"></i>
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Augmentez votre chiffre d'affaires grâce à des outils performants !</p>
+                        <p>Augmentez votre chiffre d'affaires !</p>
                     </div>
                 </div>
                 <div class="info-line">
@@ -513,7 +513,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Offre entre 10 000€ et 15 000€ selon vos besoins, profitez-en !</p>
+                        <p>Offre entre 10 000€ et 15 000€</p>
                     </div>
                 </div>
             </div>
