--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -888,7 +888,15 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <i class="fa fa-phone" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>(+33) 6.34.68.32.35 / (+33) 6.78.12.23.91</p>
+                                <p>(+33) 6.34.68.32.35</p>
+                            </div>
+                        </div>
+                        <div class="info-line">
+                            <div class="info-icon wow fadeIn animated">
+                                <i class="fa fa-phone" aria-hidden="true"></i>
+                            </div>
+                            <div class="info-text wow fadeIn animated">
+                                <p>(+33) 6.78.12.23.91</p>
                             </div>
                         </div>
 
